FIX: Swagger annotations
